# orbgame

./: Cargo.toml  Justfile  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: game.rs  lib.rs
